# open-rl

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  current_branch_changes.patch  design.md  design_arch.mmd  proposal.md  pyproject.toml  ruff.toml  task.md  test_api_support.py
.github/workflows/: build-and-push.yml  build-pr.yml  (+1 more)
client/: .gitignore  README.md  cli.py  functiongemma_sft.py  piglatin_sft_notebook.ipynb  plot_logs.py  plot_metrics.py  pyproject.toml  rlvr.py  sft.py  showcase_rlvr.py  test_basic_workflow.py  test_rl_workflow.py  test_rlvr.py  test_rlvr_notebook.py  test_sft.py  test_sft_notebook.py  test_simple_rl.py  texttosql_grpo_utils.py  texttosql_rewards.py  texttosql_sft.py  texttosql_sft_grpo.py  texttosql_sft_notebook.ipynb  verify_ppo.py
docs/: architecture.md  configuration.md  contributing.md  function-gemma-guide.md  rl_concepts.md  state-delta-checkpointing.md  tinker-client-compatibility.md  vllm-state-recovery-demo.md
examples/: .dockerignore  Dockerfile  README.md  pyproject.toml
examples/autoresearch/: Dockerfile  README.md  cleanup_research_session.sh  event_log.py  run_attempt.py  run_research_agent.sh  tinker_utils.py
examples/autoresearch/harness/: __init__.py  agent.py  attempt.py  cli.py  git.py  io.py  recipe.py  serve.py  ui.py  utils.py
examples/autoresearch/k8s/base/: agent.yaml  kustomization.yaml  kustomizeconfig.yaml  researcher.yaml  resources.yaml  settings.yaml  ui.yaml
examples/autoresearch/recipes/: __init__.py
examples/autoresearch/recipes/math_rl/: README.md  __init__.py  autoresearch.toml  config.toml  kustomization.yaml  program.md  train.py
examples/autoresearch/recipes/math_rl/gke/: kustomization.yaml
examples/autoresearch/recipes/math_rl/gke/autoresearch/: kustomization.yaml
examples/autoresearch/recipes/text_sql/: README.md  __init__.py  autoresearch.toml  kustomization.yaml  prepare.py  program.md  train.py
examples/autoresearch/ui/: __init__.py  app.js  diff.js  experiments.html  index.html  observer.py  style.css
examples/autoresearch/ui/assets/: pierre-diffs.min.js
examples/rl/autoresearch/: README.md  cleanup_research_session.sh  run_attempt.py  run_research_agent.sh  telemetry.py
examples/rl/autoresearch/k8s/base/: kustomization.yaml  resources.yaml
examples/rl/autoresearch/math_rl/: README.md  autoresearch.toml  kustomization.yaml  program.md  train.py
examples/rl/autoresearch/math_rl/gke/autoresearch/: kustomization.yaml  program.md
examples/rl/autoresearch/text_sql/: README.md  autoresearch.toml  kustomization.yaml  prepare.py  program.md  train.py
examples/rl/autoresearch/ui/: app.js  observer.py  style.css
examples/rl/rlvr/: README.md
examples/rl/text-to-sql/: README.md  plot_ttsql_curves.py  rl-recipe.md  texttosql_gemma4_plain_notebook.ipynb  texttosql_grpo_notebook.ipynb  texttosql_grpo_utils.py  texttosql_rewards.py  texttosql_rl_notebook.ipynb  texttosql_sft_grpo.py
examples/rl/text-to-sql/utils/: plot.py
examples/sft/function-gemma/: README.md
examples/sft/gsm8k/: README.md  gsm8k_sft.py  vllm_eval.py
examples/sft/hello-world/: README.md  sft.py
examples/sft/pig-latin/: README.md  piglatin_sft_notebook.ipynb
examples/sft/text-to-sql/: README.md  texttosql_sft.py  texttosql_sft_notebook.ipynb
examples/tests/: test_piglatin_gemma.py  test_piglatin_qwen.py  tinker_client_compat.py
examples/text-to-sql/: README.md  kustomization.yaml  texttosql_rl_notebook.ipynb
examples/tinker-cookbook/: README.md
examples/tiny/: tiny_rl.py  tiny_sft.py
scripts/: apply_dashboard.sh  gen_gcp_ssh_config.py  run_training_e2e.py
server/: .dockerignore  Dockerfile  README.md  gemma4_vllm_lora_fix.md  gemma4_vllm_lora_fix.patch  pyproject.toml
server/kubernetes/: deployment.yaml  service.yaml
server/kubernetes/distributed-lustre/: 01-lustre-pvc.yaml  02-redis.yaml  03-vllm.yaml  04-gateway.yaml
server/kubernetes/single-process-gke/: 04-deployment.yaml
server/src/: checkpoints.py  clock_cycle.py  engine.py  gateway.py  main.py  state.py  store.py  trainer.py  trainer2.py  vllm_sampler.py  vllm_worker.py  worker.py
server/src/trainer/: engine.py
spec/: design.md  questions.md
tests/: _server_fixture.py  test_autoresearch_run_attempt.py  test_autoresearch_ui_observer.py  test_checkpoint_store.py  test_clock_cycle_checkpoint_recovery.py  test_delta_store.py  test_gateway_paths.py  test_gateway_vllm_routing.py  test_lora_targets.py  test_orchestrator_client.py  test_snapshot_agent.py  test_state_delta.py  test_store_checkpoint_registry.py  test_trainer_optimizer_correctness.py  test_trainer_scheduler.py  test_vllm_sampler_weight_sync.py  test_weight_sync.py  test_worker_launch_processor.py  test_worker_manager.py  tinker_client_compat.py
(+83 files in other folders)
