[project]
name = "open-rl"
version = "0.1.0"
description = "Workspace root and development tooling for the Open RL repository."
requires-python = ">=3.12"
dependencies = []

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "dev/tools",
    "examples",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff==0.11.6",
]
