[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "open-rl"
version = "0.1.0"
description = "Open-RL server and training runtime."
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "chz>=0.4.0",
    "fastapi",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-exporter-gcp-trace",
    "pydantic",
    "redis>=5.0.0",
    "uvicorn",
    "httpx",
    "tqdm>=4.50",
]

[project.optional-dependencies]
cpu = [
    "datasets",
    "numpy",
    "peft",
    "torch",
    "transformers>=5.5.4",
]
gpu = [
    "datasets",
    "numpy",
    "peft",
    "torch; sys_platform == 'linux'",
    "torchvision; sys_platform == 'linux'",
    "transformers>=5.5.4",
]
vllm = [
    "torch; sys_platform == 'linux'",
    "torchvision; sys_platform == 'linux'",
    "torch-c-dlpack-ext; sys_platform == 'linux'",
    "vllm==0.20.0; sys_platform == 'linux'",
]
# Kubernetes cluster mode: the k8s API client used to launch FFT worker pods
# (OPEN_RL_WORKER_LAUNCHER=kubernetes).
cluster = [
    "kubernetes>=29",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["server*", "training*", "snapshot_agent*"]

[tool.uv]
override-dependencies = [
    # vLLM still carries an older transformers constraint; keep the project on
    # the newer transformers line declared in our extras.
    "transformers>=5.5.4",
]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "gpu" },
    ],
    [
        { extra = "cpu" },
        { extra = "vllm" },
    ],
]

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "torch-gpu"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[[tool.uv.index]]
name = "vllm-cu129"
url = "https://wheels.vllm.ai/0.20.0/cu129"
explicit = true

[tool.uv.sources]
# Pick the torch build from the user-facing cpu/gpu extras; vllm always uses CUDA torch.
torch = [
    { index = "torch-cpu", extra = "cpu" },
    { index = "torch-gpu", extra = "gpu", marker = "sys_platform == 'linux'" },
    { index = "torch-gpu", extra = "vllm", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "torch-gpu", extra = "gpu", marker = "sys_platform == 'linux'" },
    { index = "torch-gpu", extra = "vllm", marker = "sys_platform == 'linux'" },
]
vllm = [
    { index = "vllm-cu129", extra = "vllm", marker = "sys_platform == 'linux'" },
]
