[project]
name = "open-rl-examples"
version = "0.1.0"
description = "Dependencies for the Open-RL examples."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chz>=0.4.0",
    "jinja2",
    "matplotlib>=3.10.8",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
    "orjson>=3.11.8",
    "requests>=2.32.5",
    "tinker==0.18.2",
    "tinker-cookbook[math-rl]==0.3.0",
    "datasets>=4.5.0",
    "huggingface_hub>=0.28.1",
    "opentelemetry-instrumentation-httpx>=0.61b0",
    "opentelemetry-exporter-gcp-trace>=1.11.0",
    "opentelemetry-sdk>=1.40.0",
    "transformers>=5.7.0",
    "ipykernel",
    "torch",
]

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "torch-cpu" }

[tool.uv]
package = false
override-dependencies = [
    "transformers>=5.7.0",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
