[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "accelerate",
    "datasets",
    "fastapi",
    "numpy",
    "peft",
    "pydantic",
    "torch",
    "torch-c-dlpack-ext; sys_platform == 'linux'",
    "transformers",
    "trl",
    "uvicorn",
    "vllm>=0.15.0; sys_platform == 'linux'",
]
